consulting-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consulting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consulting-service
  template:
    metadata:
      labels:
        app: consulting-service
    spec:
      containers:
        - name: consulting-service
          image: gyongcode/consulting-service:31
          ports:
            - containerPort: 8080
