consulting-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consulting-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /consulting
            pathType: Prefix
            backend:
              service:
                name: consulting-service
                port:
                  number: 80
